--- a/public/readme.html
+++ b/public/readme.html
@@ -2,6 +2,7 @@
   <head><title>Connect-X "x-in a row"</title><link rel="stylesheet" href="stylesheets/style.css"></head>
   <body>
   	<script src="javascripts/pixi.dev.js"></script>
-  	<script src="javascripts/game.js"></script>
+  	<script src="http://coffeescript.org/extras/coffee-script.js"></script>
+  	<script src="javascripts/game.coffee" type="text/coffeescript"></script>
   </body>
 </html>
